--- a/index.html
+++ b/index.html
@@ -781,7 +781,7 @@
                 <p>Senior Front-End Developer specializing in creating intuitive, user-centered web applications with modern technologies and responsive design principles.</p>
                 
                 <div class="social-links">
-                    <a href="https://linkedin.com/in/alexcarter" class="social-link" target="_blank" aria-label="LinkedIn Profile">
+                    <a href="https://www.linkedin.com/in/prasanth-k-741b64381" class="social-link" target="_blank" aria-label="LinkedIn Profile">
                         <i class="fab fa-linkedin-in"></i>
                     </a>
                     <a href="https://instagram.com/alexcarter.dev" class="social-link" target="_blank" aria-label="Instagram Profile">
