Update LCM resources in index.html

--- a/index.html
+++ b/index.html
@@ -155,8 +155,8 @@
                 day: 5,
                 title: "LCM (Least Common Multiple)",
                 desc: "Methods to find LCM and relationship between HCF and LCM.",
-                pdf: "files/day5_lcm.pdf",
-                videoUrl: "https://www.youtube.com/watch?v=B_C-pezJhLY",
+                pdf: "files/5.pdf",
+                videoUrl: "https://youtu.be/s0v-JGen6C0?si=jHwP9bq1jBDW__de",
                 prompts: ["Find LCM of 12, 15, and 20.", "Formula relating HCF, LCM and two numbers."]
             },
             {
