Update PDF and video URLs for days 6 and 7

--- a/index.html
+++ b/index.html
@@ -163,15 +163,15 @@
                 day: 6,
                 title: "Remainder Theorem Basics",
                 desc: "Introduction to remainders and basic modular arithmetic.",
-                pdf: "files/day6_remainder.pdf",
-                videoUrl: "https://www.youtube.com/watch?v=UkkNjDIltQg",
+                pdf: "files/6.pdf",
+                videoUrl: "https://youtu.be/hoUl7_eg5mY?si=rlTd4_CUdU0SXYLm",
                 prompts: ["Find the remainder when 123 is divided by 5.", "Concept of negative remainders."]
             },
             {
                 day: 7,
                 title: "Advanced Remainder Theorems",
                 desc: "Euler's theorem, Fermat's Little Theorem application.",
-                pdf: "files/day7_adv_remainder.pdf",
+                pdf: "files/7.pdf",
                 videoUrl: "https://www.youtube.com/watch?v=UkkNjDIltQg",
                 prompts: ["Find remainder of 2^50 divided by 7."]
             },
