Update titles and PDFs for multiple days

--- a/index.html
+++ b/index.html
@@ -169,25 +169,25 @@
             },
             {
                 day: 7,
-                title: "Advanced Remainder Theorems",
-                desc: "Euler's theorem, Fermat's Little Theorem application.",
+                title: "practice day for reminder theorem",
+                desc: "Remainder Theorem Basics",
                 pdf: "files/7.pdf",
-                videoUrl: "https://www.youtube.com/watch?v=UkkNjDIltQg",
-                prompts: ["Find remainder of 2^50 divided by 7."]
+                videoUrl: "https://youtu.be/hoUl7_eg5mY?si=rlTd4_CUdU0SXYLm",
+                prompts: ["Find remainder of 2^50 divided by 7. "]
             },
             {
                 day: 8,
                 title: "Unit Digit & Last Two Digits",
                 desc: "Techniques to find the last digit of a power.",
-                pdf: "files/day8_unit_digit.pdf",
-                videoUrl: "https://www.youtube.com/watch?v=UkkNjDIltQg",
+                pdf: "files/8.pdf",
+                videoUrl: "https://youtu.be/_6nv8PgDxrA?si=KBJz_k9qWayKGWZa",
                 prompts: ["Find the unit digit of 7^105.", "Cyclicity of numbers."]
             },
             {
                 day: 9,
                 title: "Practice: Number Systems I",
                 desc: "Review and practice questions on Divisibility and Primes.",
-                pdf: "files/day9_practice.pdf",
+                pdf: "files/9.pdf",
                 videoUrl: "https://www.youtube.com/watch?v=UkkNjDIltQg",
                 prompts: ["Solve 20 mixed questions on divisibility."]
             },
@@ -195,7 +195,7 @@
                 day: 10,
                 title: "Practice: HCF & LCM Word Problems",
                 desc: "Solving real-world problems involving bells tolling, traffic lights, etc.",
-                pdf: "files/day10_practice.pdf",
+                pdf: "files/10.pdf",
                 videoUrl: "https://www.youtube.com/watch?v=B_C-pezJhLY",
                 prompts: ["Traffic lights change every 48, 72, 108 sec. When will they change together?"]
             },
@@ -203,7 +203,7 @@
                 day: 11,
                 title: "Practice: Remainder Theorem",
                 desc: "Deep dive into remainder problems.",
-                pdf: "files/day11_practice.pdf",
+                pdf: "files/11.pdf",
                 videoUrl: "https://www.youtube.com/watch?v=UkkNjDIltQg",
                 prompts: ["Solve 15 advanced remainder questions."]
             },
@@ -211,7 +211,7 @@
                 day: 12,
                 title: "Simplification & Approximations",
                 desc: "BODMAS rule, surds, and indices basics.",
-                pdf: "files/day12_simplification.pdf",
+                pdf: "files/12.pdf",
                 videoUrl: "https://www.youtube.com/watch?v=UkkNjDIltQg",
                 prompts: ["Simplify: 15 * 12 / 6 + 4 - 2."]
             },
