Update video URL for practice problems

--- a/index.html
+++ b/index.html
@@ -196,7 +196,7 @@
                 title: "Practice: HCF & LCM Word Problems",
                 desc: "Solving real-world problems involving bells tolling, traffic lights, etc.",
                 pdf: "files/10.pdf",
-                videoUrl: "https://www.youtube.com/watch?v=B_C-pezJhLY",
+                videoUrl: "https://youtu.be/xlf5hySiwlI?si=ut6Xw1OKERUGubPL",
                 prompts: ["Traffic lights change every 48, 72, 108 sec. When will they change together?"]
             },
             {
