Update video URLs for practice sessions

--- a/index.html
+++ b/index.html
@@ -205,6 +205,7 @@
                 desc: "Deep dive into remainder problems.",
                 pdf: "files/11.pdf",
                 videoUrl: "https://www.youtube.com/watch?v=UkkNjDIltQg",
+                videoUrl: "https://youtu.be/lTuWPSK0S7A?si=UFgthG_RFbqBcdfR",
                 prompts: ["Solve 15 advanced remainder questions."]
             },
             {
@@ -212,7 +213,7 @@
                 title: "Simplification & Approximations",
                 desc: "BODMAS rule, surds, and indices basics.",
                 pdf: "files/12.pdf",
-                videoUrl: "https://www.youtube.com/watch?v=UkkNjDIltQg",
+                videoUrl: "https://youtu.be/nMzGl21w360?si=zQnjaRx9KApOpRbR",
                 prompts: ["Simplify: 15 * 12 / 6 + 4 - 2."]
             },
             {
