--- a/index.html
+++ b/index.html
@@ -65,6 +65,11 @@
                     <h2 class="text-3xl md:text-4xl font-bold text-white mt-1" id="content-title">Day Title</h2>
                 </div>
 
+                <div class="flex flex-col gap-6 h-[500px]">
+                        <div class="bg-cardbg rounded-lg shadow-lg flex-1 border border-gray-700 overflow-hidden flex flex-col">
+                             <div class="p-2 bg-gray-800 border-b border-gray-600 text-xs text-gray-400 uppercase font-bold">Video Lecture</div>
+                             <iframe id="content-video" class="w-full h-full flex-1" src="" title="Video" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+</div>
                 <div class="bg-cardbg p-5 rounded-lg border-l-4 border-blue-500">
                     <p class="text-gray-300 leading-relaxed" id="content-desc"></p>
                 </div>
